# job-site-performance

./: README.md  job_site_performance.yaml  main.py  pyproject.toml  requirements.txt
job_site_project/: dbt_project.yml
job_site_project/models/analytics/: job_site_performance.sql
job_site_project/models/marts/: _marts.yml  dim_cost_bucket.sql  dim_date.sql  dim_job_status.sql  dim_job_type.sql  dim_location.sql  fact_job_filings.sql
job_site_project/models/staging/: sources.yml  stg_job_filings.sql
job_site_project/seeds/: job_status_codes.csv
misc/: split_file.ipynb
streamlit_app/: .gitignore  app.py
